<resources>
    <string name="app_name">boletaFugaz</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cerrar_sesion">Cerrar Sesion</string>

    <string name="menu_inicio">Inicio</string>
    <string name="menu_reporte">Historial</string>
    <string name="menu_termino">Terminos y condiciones</string>
    <string name="menu_politica">Politica de privacidad</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_emisor">Registra a tus emisores</string>
    <string name="menu_lista_emisor">Lista de emisores</string>

    <string name="txtCantidad">Cantidad</string>
    <string name="txtPrecio">0</string>
    <string name="lblTotal">Total:</string>

    <string name="btn0">0</string>
    <string name="btn00">00</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btnClear">C</string>
    <string name="btnX">X</string>
    <string name="btnMas">+</string>
    <string name="btnImprimir">Imprimir</string>
    <string name="btnVolver">Volver</string>


    <string name="etQrContent">Contenido del código (Mensaje, Página web, étc)</string>
    <string name="qrContentButton">GENERAR</string>
    <string name="saveQrCodeButton">GUARDAR CÓDIGO</string>
    <string name="shareQrCodeButton">COMPARTIR CÓDIGO</string>
    <string name="etWithContent">Código generado</string>
    <string name="etWithoutContent">Error: Contenido vacío</string>
    <string name="errorNullFile">El código aún no ha sido generado</string>
    <string name="errorNullBitmap">Código no generado aún</string>
    <string name="correctImageSaved">¡Imagen guardada correctamente!</string>
    <string name="codeGeneratedMessage">Código QR generado y enviado desde QRCodeGenerator</string>
    <string name="qrGeneratorTitle">Generar Código</string>
    <string name="accept">ACEPTAR</string>

    <string-array name="regiones">
        <item>Arica y Parinacota</item>
        <item>Tarapaca</item>
        <item>Antofagasta</item>
        <item>Atacama</item>
        <item>Coquimbo</item>
        <item>Valparaiso</item>
        <item>Metropolitana</item>
        <item>OHiggins</item>
        <item>Maule</item>
        <item>Biobio</item>
        <item>Araucania</item>
        <item>Los Rios</item>
        <item>Los Lagos</item>
        <item>Aysen</item>
        <item>Magallanes</item>
    </string-array>


    <string-array name="dlangs">
        <item>Registre un emisor para usar la calculadora ...</item>
    </string-array>

    <string name="igual">=</string>
    <string name="ac">AC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_registrar_giro">Registrar Giro</string>
    <string name="title_activity_factura">Factura</string>
    <string name="title_activity_mostrar_emisor">Datos de Emisor</string>
    <string name="title_activity_historial_boleta">Registro de Boletas</string>
    <string name="title_activity_historial_factura">Registro de Facturas</string>
    <string name="title_activity_mostrar_factura">Datos de Factura</string>
    <string name="title_activity_mostrar_boleta">Datos de Boleta</string>
    <string name="title_activity_mostrar_datos_productos">Datos de Productos</string>
    <string name="title_activity_agregar_productos">Registrar Productos</string>
    <string name="title_activity_calculadora">Calculadora</string>
    <string name="title_activity_lista_giro">Listado de giros</string>
    <string name="title_activity_mostrar_giro">Datos de giro</string>
</resources>