<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/menu_inicio" />
        <item
            android:id="@+id/nav_reportes"
            android:icon="@drawable/factura"
            android:title="@string/menu_reporte" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/cuenta"
            android:title="@string/menu_cuenta" />
        <item
            android:id="@+id/nav_emisor"
            android:icon="@drawable/empresa"
            android:title="@string/menu_emisor" />
        <item
            android:id="@+id/nav_lista_emisor"
            android:icon="@drawable/lista"
            android:title="@string/menu_lista_emisor" />
        <item
            android:id="@+id/nav_termino"
            android:icon="@drawable/terminos"
            android:title="@string/menu_termino" />
        <item
            android:id="@+id/nav_politica"
            android:icon="@drawable/politica"
            android:title="@string/menu_politica" />
    </group>
</menu>